<?xml version="1.0" encoding="utf-8"?>
<layout>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:orientation="vertical">

    <EditText
        android:id="@+id/medicine_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:hint="@string/hint_medicine_name"
        android:inputType="text" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="08dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/sell_button"
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:text="@string/sell" />

        <EditText
            android:id="@+id/medicine_quantity"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/hint_medicine_quantity"
            android:inputType="number"
            android:textAlignment="center" />

        <Button
            android:id="@+id/buy_button"
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:layout_gravity=""
            android:text="@string/buy" />
    </LinearLayout>

    <EditText
        android:id="@+id/medicine_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/hint_medicine_price"
        android:inputType="numberDecimal" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/manuf_month"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/hint_manufacturing_month"
            android:inputType="number" />

        <EditText
            android:id="@+id/manuf_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:hint="@string/hint_manufacturing_year"
            android:inputType="number" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/expiry_month"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:hint="@string/hint_manufacturing_month"
            android:inputType="number" />

        <EditText
            android:id="@+id/expiry_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="30dp"
            android:hint="@string/hint_manufacturing_year"
            android:inputType="number" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/email_supplier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:hint="@string/hint_example_email_supplier"
            android:inputType="textEmailAddress" />
    </LinearLayout>

    <Button
        android:id="@+id/to_order_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="6dp"
        android:text="@string/to_order_button" />
</LinearLayout>
</layout>